--- a/NetCommunitySolution.Web/Views/Post/New.cshtml
+++ b/NetCommunitySolution.Web/Views/Post/New.cshtml
@@ -13,9 +13,9 @@
         <div class="layui-row">
             <div class="layui-col-md-offset9 layui-col-md3">
                 <div class="buttons">
-                    <a class="layui-btn layui-btn-primary">返回首页</a>
-                    <a class="layui-btn layui-btn-danger">会员中心</a>
-                    <button type="submit" name="save-continue" class="layui-btn layui-btn-warm">
+                    <a class="layui-btn layui-btn-primary" href="@Url.Action("Index","Home")">返回首页</a>
+                    <a class="layui-btn layui-btn-danger" href="@Url.Action("Info","Customer")">会员中心</a>
+                    <button type="submit" name="save" class="layui-btn layui-btn-warm">
                         发布
                     </button>
                     <button type="submit" name="save-continue" class="layui-btn layui-btn-normal">
