--- a/NetCommunitySolution.Web/Areas/Operate/Views/Shared/_Sidebar.cshtml
+++ b/NetCommunitySolution.Web/Areas/Operate/Views/Shared/_Sidebar.cshtml
@@ -25,8 +25,7 @@
                 <dl class="layui-nav-child">
                     <dd><a href="@Url.Action("Index","Catalog")" @if (ViewBag.ActiveItem == "Catalog-List") { <text> class="layui-this" </text> }>类目列表</a></dd>
                     <dd><a href="@Url.Action("Index","ContentLabel")" @if (ViewBag.ActiveItem == "Catalog-Label") { <text> class="layui-this" </text> }>标签列表</a></dd>
-                    <dd><a href="">后台模版</a></dd>
-                    <dd><a href="">电商平台</a></dd>
+                    <dd><a href="@Url.Action("Index","Post")" @if (ViewBag.ActiveItem == "Catalog-Post") { <text> class="layui-this" </text> }>帖子列表</a></dd>
                 </dl>
             </li>
             <li class="layui-nav-item"><a href="">云市场</a></li>
