--- a/NetCommunitySolution.Web/Content/style.css
+++ b/NetCommunitySolution.Web/Content/style.css
@@ -66,13 +66,15 @@ a,a:hover{text-decoration:none;}
 
 /* Home Category */
 .catalog-box {
-    margin-top:15px;
+    margin-top: 15px;
+    background: #393d49;
 }
     .catalog-box .category-title {
         margin-top: 15px;
         padding: 15px;
-        color: #4e5465;
-        border: 1px solid #4e5465
+        color: #fff;
+        font-weight: 700;
+        border-bottom: 3px solid #009688
     }
 .content-label-box {
     margin-top: 15px;
