--- a/NetCommunitySolution.Web/Content/admin.css
+++ b/NetCommunitySolution.Web/Content/admin.css
@@ -11,3 +11,7 @@ a,a:hover{
 .layui-layout-body .layui-layout-admin .layui-header .layui-logo a {
     color: #009688;
 }
+
+.layui-body{
+    padding:15px;
+}
