--- a/NetCommunitySolution.Web/Areas/Operate/Views/ContentLabel/Index.cshtml
+++ b/NetCommunitySolution.Web/Areas/Operate/Views/ContentLabel/Index.cshtml
@@ -36,7 +36,7 @@
 
     <script type="text/html" id="op">
         <!-- 这里的 checked 的状态只是演示 -->
-        <a class="layui-btn layui-btn-mini layui-btn-xs" href="Edit/{{d.Id}}">查看</a>
+        <a class="layui-btn layui-btn-mini layui-btn-xs" href="/Operate/ContentLabel/Edit/{{d.Id}}">查看</a>
         <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
     </script>
 
