--- a/NetCommunitySolution.Web/Areas/Operate/Views/Shared/_Sidebar.cshtml
+++ b/NetCommunitySolution.Web/Areas/Operate/Views/Shared/_Sidebar.cshtml
@@ -18,6 +18,7 @@
                     <dd><a href="@Url.Action("CustomerSetting","Setting")" @if (ViewBag.ActiveItem == "Customer-Setting") { <text> class="layui-this" </text> }>用户配置</a></dd>
                     <dd><a href="@Url.Action("PostSetting","Setting")" @if (ViewBag.ActiveItem == "Post-Setting") { <text> class="layui-this" </text> }>帖子配置</a></dd>
                     <dd><a href="@Url.Action("MediaSetting","Setting")" @if (ViewBag.ActiveItem == "Media-Setting") { <text> class="layui-this" </text> }>媒体配置</a></dd>
+                    <dd><a href="@Url.Action("RewardSetting","Setting")" @if (ViewBag.ActiveItem == "Reward-Setting") { <text> class="layui-this" </text> }>积分配置</a></dd>
                 </dl>
             </li>
             <li class="layui-nav-item @if (ViewBag.ActiveMenu == "Catalog") { <text> layui-nav-itemed</text>}">
