--- a/NetCommunitySolution.Web/Areas/Operate/Views/Customer/Index.cshtml
+++ b/NetCommunitySolution.Web/Areas/Operate/Views/Customer/Index.cshtml
@@ -7,7 +7,15 @@
 
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
     <legend>用户管理</legend>
-</fieldset>
+</fieldset><div class="layui-row">
+
+    <div class="layui-col-xs1 layui-col-md-offset11">
+        <div class="grid-demo grid-demo-bg1">
+
+            <a class="layui-btn layui-btn-danger" id="label-search" href="@Url.Action("Create")"><i class="fa fa-search"></i>新增管理员</a>
+        </div>
+    </div>
+</div>
 <div class="layui-form-item">
     <div class="layui-inline">
         <label class="layui-form-label">关键字</label>
