--- a/NetCommunitySolution.Web/Views/Customer/Register.cshtml
+++ b/NetCommunitySolution.Web/Views/Customer/Register.cshtml
@@ -47,9 +47,9 @@
                         @Html.HiddenFor(model => model.EnabledCaptcha)
                         <div class="layui-form-item" pane="">
                             <div class="layui-input-block">
-                                @Html.NETRadioButtonFor(Model => Model.RegisterMode, RegistrationMode.Mobile, new { title = "手机号", @checked = "checked" }, "mode")
-                                @Html.NETRadioButtonFor(Model => Model.RegisterMode, RegistrationMode.Email, new { title = "邮箱" }, "mode")
-                                @Html.NETRadioButtonFor(Model => Model.RegisterMode, RegistrationMode.UserName, new { title = "账号" }, "mode")
+                                @Html.NETRadioButtonFor(model => model.RegisterMode, RegistrationMode.Mobile, new { title = "手机号", @checked = "checked" }, "mode")
+                                @Html.NETRadioButtonFor(model => model.RegisterMode, RegistrationMode.Email, new { title = "邮箱" }, "mode")
+                                @Html.NETRadioButtonFor(model => model.RegisterMode, RegistrationMode.UserName, new { title = "账号" }, "mode")
                             </div>
                         </div>
                         <div class="layui-form-item panel-@RegistrationMode.Mobile panel-registration-mode" pane="">
@@ -77,11 +77,17 @@
                             </div>
                         </div>
 
+                        <div class="layui-form-item" pane="">
+                            @Html.NETLabelFor(model => model.ConfirmPassword)
+                            <div class="layui-input-block">
+                                @Html.NETEditorFor(model => model.ConfirmPassword)
+                            </div>
+                        </div>
                         if (Model.EnabledCaptcha)
                         {
 
                             <div class="layui-form-item">
-                                @Html.NETLabelFor(model => model.Captcha)
+                                @Html.NETLabelFor(model => model.EnabledCaptcha)
                                 <div class="layui-inline">
                                     <input type="text" name="@Model.CaptchaName" id="@Model.CaptchaName" class="layui-input" />
                                 </div>
@@ -90,12 +96,6 @@
                                 </div>
                             </div>
                         }
-                        <div class="layui-form-item" pane="">
-                            @Html.NETLabelFor(model => model.ConfirmPassword)
-                            <div class="layui-input-block">
-                                @Html.NETEditorFor(model => model.ConfirmPassword)
-                            </div>
-                        </div>
 
                         <div class="buttons">
                             <input type="submit" class="layui-btn layui-btn-danger" value="注册" />
@@ -128,6 +128,12 @@
                 $(".panel-registration-mode").hide();
                 activateRegisterModediately(data.value);
             });
+
+        $(function () {
+            $("#catpcha-img").bind("click", function () {
+                this.src = "@Url.Action("Captcha", "Common", new { imageHeight = 41 })&time=" + (new Date()).getTime();
+            });
+        });
         });
     </script>
 </body>
